--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <form class="form-inline search-form js-search-form">
         <div class="form-group mx-sm-3 mb-2"> 
         <label for="searchQuery" class="sr-only">Что ищем?</label> 
-        <input type="text" class="form-control" name="query" id="searchQuery" placeholder="Что ищем?" autocomplete="off" />
+        <input type="text" class="form-control" name="query" id="searchQuery" placeholder="Что ищем?" autocomplete="off"/>
         </div>
     </form>
 
@@ -23,11 +23,11 @@
 
 <button type="button" class="btn btn-primary button" data-action="load-more">
 
- <span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
+<span class="spinner-border spinner-border-sm spinner is-hidden" role="status" aria-hidden="true"></span>
 
 <span class="label">Показать ещё</span>
 </button>
 
 <script src="../js/news.js" type="module"></script>
 
-</html>
+</html> -->
