--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,6 +3,10 @@
 }
 
 body {
+    display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
   position: relative;
   max-width: 900px;
   margin-left: auto;
@@ -15,13 +19,14 @@ body {
   background-color: #dddddd76;
   color: #212121;
   line-height: 1.5;
-
-
 }
 
 ul{
-margin: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   padding:0px;
+
 }
 
 li{
